--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "start": "react-native start"
   },
   "dependencies": {
     "react": "18.3.1",
@@ -25,12 +24,12 @@
     "@react-native/metro-config": "0.76.3",
     "@react-native/typescript-config": "0.76.3",
     "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "@typescript-eslint/eslint-plugin": "5.23",
+    "@typescript-eslint/parser": "5.23",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "eslint-config-prettier": "8.5",
+    "eslint-plugin-import": "2.26",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
