--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "android": "react-native run-android --port=1234",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start"
+    "start": "react-native start --port=1234"
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -23,13 +24,20 @@
     "@react-native/eslint-config": "0.76.3",
     "@react-native/metro-config": "0.76.3",
     "@react-native/typescript-config": "0.76.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "5.23",
     "@typescript-eslint/parser": "5.23",
+    "axios": "^1.7.8",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "8.5",
     "eslint-plugin-import": "2.26",
+    "eslint-plugin-jest": "^28.9.0",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
+    "react-test-renderer": "^18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
